--- a/index.html
+++ b/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link rel="stylesheet" href="./css/estilo.css" />
-    <title>DIW03 CARTAGENA ZOMBIE</title>
+    <title>DIW03 CARTAGENA ZOMBIE - inicio</title>
 </head>
+
 <body>
-    
+
+    <body>
+        <div class="flex-container">
+            <header>
+                <!-- ENCABEZADO -->
+                <div class="flex-header">
+
+                    <div class="logo">
+                        <div>
+                            <h1>CARTAGENA</h1>
+                        </div>
+                        <div>
+                            <H2>ZOMBIE</H2>
+                        </div>
+                    </div>
+                    <div class="nav">
+                        <nav>
+                            <ul class="nav_links">
+                                <li><a href="./index.html">Inicio</a></li>
+                                <li><a href="./equipate.html">Equipate</a></li>
+                                <li><a href="./alimentate.html">Alimentate</a></li>
+                                <li><a href="./cuidate.html">Cuidate</a></li>
+                                <li><a href="./disfruta.html">Disfruta</a></li>
+                                <li><a href="./sal.html">Sal de la Pesadilla</a></li>
+                            </ul>
+
+                        </nav>
+                    </div>
+                    <div class="botonAcceso">
+                        <a class="botonSalvate" href="./login.html">Salvate</button>
+                    </div>
+                </div>
+
+            </header>
+            <!-- CENTRO -->
+            <main class="flex-centro">
+                <div class="imagenCentral">
+                    <img class="image" src="./img/CIRCOCARTAGENAZOMBIE_RE.png" />
+                </div>
+            </main>
+        </div>
+    </body>
+
+</html>
+
 </body>
+
 </html>
